--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/odbc?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://localhost:3306/ocdb?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
 spring.dataSource.username=root
 spring.datasource.password=1230
 mybatis.config-location=classpath:mybatis-config.xml
-mybatis.mapper-locations=toutiao/classpath:com.amaker.toutiao.dao/*.xml
+mybatis.mapper-locations=classpath:com.amaker.online.dao/*.xml
 mybatis.type-aliases-package=com.amaker.online.model
 
 spring:
