最后一次更新

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,8 @@ charset: UTF-8 #\u7F16\u7801\u683C\u5F0F
 settings:
 number_format: '0.##'   #\u6570\u5B57\u683C\u5F0F\u5316\uFF0C\u65E0\u5C0F\u6570\u70B9
 
+spring.jacksondate-format = yyyy-MM-dd HH:mm:ss
+
 
 
 
